# mcp-payload-firewall

./: .gitignore  README.md  drizzle.config.ts  next.config.ts  package.json  pnpm-lock.yaml  vercel.json
public/wasm/: firewall_engine_bg.wasm
scripts/: build-wasm.sh
src/: middleware.ts
src/app/: layout.tsx
src/app/(auth)/login/: page.tsx
src/app/(protected)/: layout.tsx
src/app/(protected)/dashboard/: page.tsx
src/app/(protected)/logs/: page.tsx
src/app/(protected)/rules/: page.tsx
src/app/(protected)/servers/: page.tsx
src/app/(protected)/tokens/: page.tsx
src/app/api/echo/: route.ts
src/app/api/logs/: route.ts
src/app/api/proxy/[...path]/: route.ts
src/app/api/rules/: route.ts
src/app/api/servers/: route.ts
src/app/api/tokens/: route.ts
src/components/: NavLinks.tsx  RuleDialog.tsx  RulesTable.tsx  ServerDialog.tsx  ServerTable.tsx
src/lib/: ai-scanner.ts  auth.ts  edge-config.ts
src/lib/db/: index.ts  schema.ts
src/lib/wasm/: firewall.ts  loader.ts
wasm-engine/: Cargo.toml
wasm-engine/src/: lib.rs
