[package]
name = "firewall-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aho-corasick = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
js-sys = "0.3"

[profile.release]
opt-level = "s"    # optimize for size (edge WASM budget)
lto = true
